@@ -1,3 +1,12 @@
+2001-10-25  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* unix/tclUnixChan.c: Added stateUpdated member to struct TtyState.
+	(TtyCloseProc,TtySetOptionProc,TtyInit): Use stateUpdated member
+	of TtyState to decide whether it is necessary to reset a serial
+	port when Tcl closes it.  Blindly resetting can cause Tcl to be
+	sent an unexpected SIGTSTP when it is executing in the background
+	[Bug 471374, reported by Chris Nelson]
+
 2001-10-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net> 
 
 	* doc/ObjectType.3: Minor documentation fix, reported by David
